# OOXML-EXTRACT

./: LICENSE.txt  README.md  pyproject.toml
src/ooxml_extract/: __init__.py  ooxml_merge.py  ooxml_package.py  ooxml_tools.py  ooxml_vba.py  utils.py  visio_vba.py  xml_formatter.py
