[project]
name = "ooxml-extract"
version = "0.1.0"
description = "CLI tool to extract OOXML office files"
readme = "README.md"
authors = [
    { name = "Thomas Winkel", email = "mail@thomas-winkel.de" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "oletools>=0.60.2",
    "pywin32>=311",
]

[project.scripts]
ooxml-extract = "ooxml_extract:cli"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
